# hpp-editor-rs-v2

./: Cargo.toml  sprite.aseprite  test.hatspp  test24.hatspp  translations.json
h/: data.json
hat/: data.json  hat.hatspp  hat23234.hatspp
script-templates/: defs.lua  wearable.lua  wings.lua
src/: animations.rs  console.rs  editor_app.rs  file_watcher.rs  hat_name_getter.rs  hats.rs  hats_data.rs  image.rs  lib.rs  main.rs  name_getter.rs  path_utils.rs  tabs.rs  texture.rs  ui_text.rs
src/catppuccin_egui/: mod.rs  themes.rs
test/: data.json
