[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[package]
name = "hpp-editor-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
asefile = "0.3.8"
bevy_math = "0.15.1"
color = "0.2.3"
color-backtrace = "0.6.1"
derivative = "2.2.0"
downcast-rs = "2.0.1"
eframe = {version="0.31.1", features = ["persistence"] }
egui_commonmark = "0.20.0"
egui_dnd = "0.12.0"
egui_dock = "0.16.0"
egui_extras = {version="0.31.1", features=["default", "image"]}
flexi_logger = "0.29.8"
glutin = "0.32.2"
# image = {version="0.25.5", features=["png"]}
log = "0.4.25"
num-derive = "0.4.2"
num-traits = "0.2.19"
egui_ltreeview = {path ="egui_ltreeview", features=["persistence"]}
open = "5.3.2"
rfd = "0.15.2"
self-replace = "1.5.0"
serde = "1.0.217"
serde_json = "1.0.137"
uuid = {version="1.12.1", features=["v4", "fast-rng"]}
pixas = {path = "../pixas"}
once_cell = "1.20.2"
zip = "2.2.3"
paste = "1.0.15"
egui-modal = {path = "egui-modal"}
if_chain = "1.0.2"
thiserror = "2.0.12"
itertools = "0.14.0"
egui-notify = "0.19.0"
borrow = "1.3.0"
# egui_ltreeview = {version="0.1.9", features=["persistence"]}
strum = {version="0.27.1", features=["derive"]}
